--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 </head>
 <body>
 <h1> This is a sample website</h1>
+    <script type="text/javascript" id="zsiqchat">var $zoho=$zoho || {};$zoho.salesiq = $zoho.salesiq || {widgetcode: "siqec8f7235b88618979b1dbc6c33ffc0e04e0f626affeeef3a48c3ad771ffffcb6", values:{},ready:function(){}};var d=document;s=d.createElement("script");s.type="text/javascript";s.id="zsiqscript";s.defer=true;s.src="https://salesiq.zohopublic.com/widget";t=d.getElementsByTagName("script")[0];t.parentNode.insertBefore(s,t);</script>
 </body>
 </html>
